# readmission-data-product

./: README.md  pyproject.toml
readmission_data_product/: pipeline.py
readmission_data_product/readers/: read_cms_data.py
tests/test_readers/: test_read_cms_data.py
