[tool.poetry]
name = "readmission-data-product"
version = "0.1.0"
description = ""
authors = ["Jo Uthoff <jouthoff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.3"
pyspark = "^3.5.3"
pandas = "^2.2.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
